--- a/planetesimal.html
+++ b/planetesimal.html
@@ -173,6 +173,21 @@
         <input type="checkbox" checked="" id="music">
         <span class="checkmark"></span>
     </label>
+    <label class="container">
+        constellations
+        <input type="checkbox" checked id="constellations">
+        <span class="checkmark"></span>
+    </label>
+    <label class="container">
+        constellation labels
+        <input type="checkbox" checked id="const_labels">
+        <span class="checkmark"></span>
+    </label>
+    <label class="container">
+        constellation boundaries
+        <input type="checkbox" checked id="const_boundaries">
+        <span class="checkmark"></span>
+    </label>
     <div class="container" style="padding-top:8px;padding-bottom:8px;">
         <div style="font-weight:600;margin-bottom:6px;">Time rate</div>
         <div id="time_rate_control">
@@ -192,3 +207,4 @@
     </div>
 </div>
 <script src="scripting.js" type="module"></script>
+
