Remove skyview.html file as part of project restructuring; functionality migrated to new modular architecture.

--- a/planetesimal.html
+++ b/planetesimal.html
@@ -808,6 +808,11 @@
         <input type="checkbox" checked id="const_boundaries">
         <span class="checkmark"></span>
     </label>
+    <label class="container">
+        rashi belt
+        <input type="checkbox" checked id="rashi_belt">
+        <span class="checkmark"></span>
+    </label>
 
     <label class="container">
         Horizon plane
